# dbi

./: .gitignore  README.md  bun.lockb  main.py  package.json  pyproject.toml  requirements.txt
api/: app.py  database.py  session_manager.py  shared.py
api/models/: __init__.py  article.py  user.py
api/routes/: article.py  test.py  users.py  ws.py
api/websockets/: manager.py
frontend/: bun.lockb  env.d.ts  package.json
frontend/src/: App.vue  helper.ts  main.ts  shared.ts
frontend/src/assets/: main.scss
frontend/src/components/: EditorJS.vue  NavBar.vue  index.ts
frontend/src/router/: index.ts
frontend/src/stores/: global.ts  websockets.ts
frontend/src/types/: user.ts
frontend/src/views/: HomeView.vue  LoginView.vue  NewArticle.vue  NewArticleView.vue  RegisterView.vue
frontend/src/websockets/: websockets.ts
